Style current weather section with correct font, sizing and spacing

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -40,7 +40,6 @@ $bg-color: #f0f0f0;
   font-size: 4.6rem;
   letter-spacing: -0.15rem;
   color: $black-color;
-  margin-bottom: 0.4rem;
 }
 
 // Description Small
@@ -52,7 +51,7 @@ $bg-color: #f0f0f0;
 }
 
 // Description Mid
-.temp-wrap .desc {
+@mixin mid-desc {
   font-family: "Heebo-ExtraLight";
   color: $black-color;
   font-size: 2.5rem;
@@ -60,16 +59,19 @@ $bg-color: #f0f0f0;
 }
 
 // Weather Title
-.temp-wrap .temp {
+@mixin temp-title {
   font-family: "Heebo-Bold";
-  font-size: 9rem;
+  // font-size: 9rem;
+  font-size: 8rem;
   color: $black-color;
+  line-height: 84%;
 }
 
 // Degree Symbol
 .deg-symbol {
   position: relative;
   display: inline-flex;
+  justify-content: center;
   .minus {
     position: absolute;
   }
@@ -85,11 +87,29 @@ $bg-color: #f0f0f0;
 
 // Styling
 .current {
+  text-align: center;
+
   .location {
     @include main-title;
+    margin-bottom: 0.4rem;
   }
-  .date {
+  .date,
+  .time,
+  .desc-1 li {
     @include small-desc;
+  }
+  .temp {
+    @include temp-title;
+  }
+  .desc {
+    @include mid-desc;
+    margin-bottom: 0.8rem;
+  }
+  .temp-img img {
+    height: auto;
+    width: auto;
+    max-width: 19.125rem;
+    max-height: 13.625rem;
   }
 }
 
@@ -123,37 +143,45 @@ $bg-color: #f0f0f0;
   .current,
   .forecast {
     display: grid;
-    justify-items: center;
-    align-items: center;
+    // justify-items: center;
+    // align-items: center;
   }
 
   .current {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(5, max-content);
 
-    .location {
+    .intro {
       grid-area: 1/1/2/5;
-    }
-    .date {
-      grid-area: 2/1/3/5;
+      margin-bottom: 3.2rem;
     }
     .temp-wrap {
-      grid-area: 3/1/4/3;
+      grid-area: 2/1/3/3;
+      margin-right: 1.25rem;
+      width: max-content;
+      align-self: start;
+      justify-self: end;
     }
     .temp-img {
-      grid-area: 3/3/4/5;
+      grid-area: 2/3/3/5;
+      margin-left: 1.25rem;
+      display: flex;
+      justify-content: flex-start;
     }
     .desc-1 {
-      grid-area: 4/1/5/5;
+      grid-area: 3/1/4/5;
     }
     .desc-2 {
-      grid-area: 5/1/6/5;
+      grid-area: 4/1/5/5;
     }
 
     .desc-1,
     .desc-2 {
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: repeat(3, max-content);
+      justify-content: center;
+      gap: 2.5rem;
+      margin: 1.875rem 0;
     }
   }
 
